--- a/src/components/journey.css
+++ b/src/components/journey.css
@@ -1,9 +1,11 @@
 .journey {
   display: block !important;
   margin: 3rem;
-  width: 1000px;
+  max-width: 1000px;
   margin: auto;
+  padding: 5rem;
   margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .journey > h1 {
