--- a/src/components/record-card.css
+++ b/src/components/record-card.css
@@ -1,7 +1,7 @@
 .record-card {
   height: auto;
   display: grid !important;
-  grid-template-columns: 10vw auto;
+  grid-template-columns: 10rem auto;
 
   padding: 1rem;
   border-bottom: 2px dotted black;
