--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Langar&display=swap');
 
+:root {
+    --primaryColor: #000000;
+    --contrastColor: #FFFFFF;
+    --accentColor: #FF3939;
+}
+
+::selection {
+  background-color: var(--contrastColor);
+  color: var(--accentColor);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
