--- a/src/components/topDisplay/TopDisplay.css
+++ b/src/components/topDisplay/TopDisplay.css
@@ -37,6 +37,30 @@
     place-items: center;
 }
 
-img { 
+.manball{
+    position: relative;
+}
+
+.man { 
     width: 80%;
+    z-index: 1;
+}
+
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
+
+.ball {
+    position: absolute;
+    top: -20px;
+    left: 95px;
+    z-index: 2;
+    width: 300px;
+
+    animation: rotation 100s infinite linear;
 }
